Fix alignment

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,18 @@ body {
   transition: background-color 0.1s, opacity 0.1s;
 }
 
-@media (max-width: 560px) {
+@media (min-width: 903px) {
   .container {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .row {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -68,8 +78,8 @@ body {
   }
 
   .btn {
-    margin: 25px;
-    display: inline-block;
+    margin: 15px;
+    /* display: inline-block; */
     height: 150px;
     width: 150px;
     border: 10px solid black;
